<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#657A7A"
    android:padding="18dp">


    <TextView
        android:id="@+id/flavorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flavorVers"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/imageItem"
        android:text="@string/plc_version"
        android:textColor="#E7ECF4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/flavorVers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:layout_toEndOf="@+id/imageItem"
        android:text="@string/plc_flavor"
        android:textColor="#DCE1EA"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageItem"
        android:layout_marginTop="5dp"
        android:background="#E80404"
        android:contentDescription="@string/border" />

    <ImageView
        android:id="@+id/imageItem"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/images_desc"
        app:srcCompat="@drawable/red_devil" />

</RelativeLayout>
